	* po/libc.pot: Regenerated.

2012-06-13  Carlos O'Donell  <carlos_odonell@mentor.com>

	* po/Makefile (libc.pot): Use UTF-8 charset.

2012-06-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14167]
	* aclocal.m4 (LIBC_TRY_CC_OPTION): New macro.
	* configure: Regenerated.
	* sysdeps/ia64/configure: Likewise.
	* sysdeps/mach/configure: Likewise.
	* sysdeps/mach/hurd/configure: Likewise.

2012-06-01  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14048]
	* sysdeps/ieee754/dbl-64/wordsize-64/e_fmod.c (__ieee754_fmod):
	Use int64_t for variable i.

2012-05-17  Andreas Jaeger  <aj@suse.de>
	    Carlos O'Donell  <carlos_odonell@mentor.com>

	[BZ #14059]
	* sysdeps/x86_64/multiarch/init-arch.h
	(bit_YMM_Usable): Rename to...
	(bit_AVX_Usable): ... this.
	(bit_FMA4_Usable): New macro.
	(bit_XMM_state): New macro.
	(bit_YMM_state): New macro.
	[__ASSEMBLER__] (index_YMM_Usable): Rename to...
	[__ASSEMBLER__] (index_AVX_Usable): ... this.
	[__ASSEMBLER__] (index_FMA4_Usable): New macro.
	(CPUID_OSXSAVE): New macro.
	(CPUID_AVX): New macro.
	(CPUID_FMA4): New macro.
	(index_YMM_Usable): Rename to...
	(index_AVX_Usable): ... this.
	(HAS_AVX): Use HAS_ARCH_FEATURE.
	(HAS_FMA4): Likewise.
	(HAS_YMM_USABLE): Remove.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Enable AVX or FMA4 IFF YMM and XMM states are usable and the features
	are present.
	* sysdeps/x86_64/multiarch/strcmp.S: Use bit_AVX_Usable.
	* sysdeps/i386/i686/multiarch/Makefile: Add test-multiarch to tests.
	* sysdeps/x86_64/multiarch/Makefile: Likewise.
	* sysdeps/i386/i686/multiarch/test-multiarch.c: New file.
	* sysdeps/x86_64/multiarch/test-multiarch.c: New file.

2012-03-21  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in (libc_cv_cc_nofma): Check for option to disable
	generation of FMA instructions.
	* configure: Regenerate.
	* config.make.in (config-cflags-nofma): Set from libc_cv_cc_nofma.
	* sysdeps/ieee754/dbl-64/Makefile: New file.